--- a/projeto1/src/main/resources/application.properties
+++ b/projeto1/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=projeto1
 spring.datasource.url=jdbc:postgresql://localhost:5432/spring-boot-projeto
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.username= username
+spring.datasource.password= password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
